fix: ajout d'un overflow pour les cartes menu (page restaurant)

--- a/SaSS/components/_animation.scss
+++ b/SaSS/components/_animation.scss
@@ -32,25 +32,21 @@
 .card:hover{ 
     .volet__hover{
         width:60px;
-    }
-    .card__prix{
-        transform: translateX(-50px);
-    }
-        
+    }  
     }
 
 .volet__hover{
-    position:absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
     font-size: 20px;
-    top:0;
-    right:0;
     width:0px;
-    height:100%;
+    height:100px;
     background-color: $tertiary-color;
     border-radius:0 20px 20px 0;
     transition:width 200ms ;
+}
+.fa-circle-check{
+    color:white;
 }
