--- a/SaSS/layout/_carte.scss
+++ b/SaSS/layout/_carte.scss
@@ -34,20 +34,24 @@
     padding-bottom: 30px;
 }
 .card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     opacity: 0;
     animation: apparition 1s ease-in-out forwards;
-    position:relative;
     margin: 10px;
     gap: 10px;
-    padding:10px 15px 10px 15px;
+    padding-left:15px;
     border-radius: 20px;
     box-shadow: 0px 4px 15px 0px #00000026;
     overflow: hidden;
+    height: 69px;
     h3,.card__prix{
         font-size: 18px;
         font-weight: 400;
         padding: 0;
         margin:0;
+        margin-bottom: 5px;
         
     }
     p{
@@ -68,14 +72,18 @@
         padding-top: 5px;
         white-space: nowrap;
     }
+    &__hover{
+        flex:1;
+        min-width: 0;
+    }
     
 }
 .over{
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    display: inline-block;
-    max-width: calc(100% - 60px);
+    flex: 1;
+    max-width: 100%;
 }
 .plat{
   animation-delay: 0.5s;
