--- a/SaSS/main.css
+++ b/SaSS/main.css
@@ -139,24 +139,22 @@ body .body__div {
 .card:hover .volet__hover {
   width: 60px;
 }
-.card:hover .card__prix {
-  transform: translateX(-50px);
-}
 
 .volet__hover {
-  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
   font-size: 20px;
-  top: 0;
-  right: 0;
   width: 0px;
-  height: 100%;
+  height: 100px;
   background-color: #99E2D0;
   border-radius: 0 20px 20px 0;
   transition: width 200ms;
+}
+
+.fa-circle-check {
+  color: white;
 }
 
 header {
@@ -500,21 +498,25 @@ footer ul li .fa-solid {
 }
 
 .card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   opacity: 0;
   animation: apparition 1s ease-in-out forwards;
-  position: relative;
   margin: 10px;
   gap: 10px;
-  padding: 10px 15px 10px 15px;
+  padding-left: 15px;
   border-radius: 20px;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1490196078);
   overflow: hidden;
+  height: 69px;
 }
 .card h3, .card .card__prix {
   font-size: 18px;
   font-weight: 400;
   padding: 0;
   margin: 0;
+  margin-bottom: 5px;
 }
 .card p {
   padding: 0;
@@ -533,13 +535,17 @@ footer ul li .fa-solid {
   padding-top: 5px;
   white-space: nowrap;
 }
+.card__hover {
+  flex: 1;
+  min-width: 0;
+}
 
 .over {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  display: inline-block;
-  max-width: calc(100% - 60px);
+  flex: 1;
+  max-width: 100%;
 }
 
 .plat {
